fix design overflow issue

--- a/app/assets/stylesheets/invoices.css.sass
+++ b/app/assets/stylesheets/invoices.css.sass
@@ -96,7 +96,7 @@ $border-color: #d1d1d1
     &:first-of-type
       border-top: 1px solid $border-color
     margin-left: 0px
-  .offset9
-    margin-left: 720px
+  .offset8
+    margin-left: 630px
   .big-border
     border-bottom: 2px solid $border-color
